[package]
name = "load_balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
bytes = "1"
clap = { version = "4.5.31", features = ["derive"] }
